added end of game logic

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div class="column_wrapper">
       <div class="word_label"><span class="word"></span>
       </div>
-      <div class="wrong_guesses"><span class="guesses"></span>
-        This is where it shows the wrong letters.
+      <div class="wrong_guesses">Wrong guesses:<span class="guesses"></span>
       </div>
       <div class="play_again"><button>Play again</button>
       </div>
