added style elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Hangman</title>
 </head>
@@ -20,7 +21,9 @@
       </div>
       <div class="wrong_guesses">Wrong guesses:<span class="guesses"></span>
       </div>
-      <div class="play_again"><button>Play again</button>
+      <div class="solution"><span class="correct_word"></span>
+      </div>
+      <div class="play_again"><span class="correct_word"></span><button>PLAY AGAIN</button>
       </div>
     </div>
   </div>
